--- a/rebar.config
+++ b/rebar.config
@@ -23,7 +23,7 @@
 
 {deps, [
         {node_package, "1.1.*", {git, "git://github.com/basho/node_package", {tag, "1.1.0"}}},
-        {webmachine, "1.9.0p1", {git, "git://github.com/basho/webmachine", {tag, "1.9.0p1"}}},
+        {webmachine, ".*", {git, "git://github.com/basho/webmachine", {branch, "ss-range-dirty-patch"}}},
         {riakc, "1.3.1", {git, "git://github.com/basho/riak-erlang-client", {tag, "1.3.1"}}},
         {lager, "1.2.*", {git, "git://github.com/basho/lager", {tag, "1.2.1"}}},
         {eper, ".*", {git, "git://github.com/basho/eper.git", {tag, "3280b736"}}},
