--- a/rebar.config
+++ b/rebar.config
@@ -33,6 +33,7 @@
         {poolboy, "0.8.1", {git, "git://github.com/basho/poolboy", {tag, "0.8.1"}}},
         {folsom, ".*", {git, "git://github.com/boundary/folsom", {tag, "0.7"}}},
         {erlcloud, "0.4.*", {git, "git://github.com/basho/erlcloud.git", {branch, "master"}}},
+	{riak_pb, "1.2.0", {git, "git://github.com/basho/riak_pb.git", {tag, "1.2.0"}}},
         {riak_repl_pb_api,"0.1.1",{git,"git@github.com:basho/riak_repl_pb_api.git",{tag,"0.1.1"}}}
        ]}.
 
