--- a/bench/riak-cs.config.sample
+++ b/bench/riak-cs.config.sample
@@ -1,7 +1,7 @@
 %% Sample config file for Riak CS basho_bench benchmarking
 
 %% About rate limiting via the `mode` setting: the `mode` rate is
-%% valid for the basho_bench_driver_moss plugin for `get` operations.
+%% valid for the basho_bench_driver_cs plugin for `get` operations.
 %% The `mode` rate does *not* apply to `insert` operations.
 %% The driver does *not* support `update` operations
 
@@ -12,34 +12,34 @@
 {report_interval, 1}.
 
 %% Replace these with your own paths
-{source_dir, "/Users/fritchie/b/src/riak_moss/bench"}.
-{code_paths, ["deps/ibrowse", "/Users/fritchie/b/src/riak_moss",
-              "/Users/fritchie/b/src/riak_moss/deps/stanchion"]}.
-{driver, basho_bench_driver_moss}.
+{source_dir, "/Users/fritchie/b/src/riak_cs/bench"}.
+{code_paths, ["deps/ibrowse", "/Users/fritchie/b/src/riak_cs",
+              "/Users/fritchie/b/src/riak_cs/deps/velvet"]}.
+{driver, basho_bench_driver_cs}.
 
 %% Replace this with a user you have created.
 %% Instructions to create a user are here:
-%% https://github.com/basho/riak_moss/wiki/Creating-a-User
-{moss_access_key, "ZG7SS3ZPECF-8LZOEBMA"}.
-{moss_secret_key, "21HoIRdeO617nJrIbam9mKH2MBxmcsMEwESvmQ=="}.
-{moss_bucket, "test"}. % create this with s3cmd before running basho_bench!
-{moss_disconnect_frequency, 5}.    % # ops before disconnecting HTTP socket
-{moss_raw_ip, "s3.amazonaws.com"}. % DO NOT CHANGE
-{moss_raw_port, 80}.               % DO NOT CHANGE
+%% https://github.com/basho/riak_cs/wiki/Creating-a-User
+{cs_access_key, "ZG7SS3ZPECF-8LZOEBMA"}.
+{cs_secret_key, "21HoIRdeO617nJrIbam9mKH2MBxmcsMEwESvmQ=="}.
+{cs_bucket, "test"}. % create this with s3cmd before running basho_bench!
+{cs_disconnect_frequency, 5}.    % # ops before disconnecting HTTP socket
+{cs_raw_ip, "s3.amazonaws.com"}. % DO NOT CHANGE
+{cs_raw_port, 80}.               % DO NOT CHANGE
 %% Replace these with your HTTP proxy's location (i.e. Riak CS)
-{moss_http_proxy_host, [{"localhost", 8080}, {"127.0.0.1", 8080}, {{127,0,0,1}, 8080}]}.
-{moss_http_proxy_port, 8080}.
-{moss_request_timeout, 999999000}.
-% If using the moss_measurement_units option, you need to change
+{cs_http_proxy_host, [{"localhost", 8080}, {"127.0.0.1", 8080}, {{127,0,0,1}, 8080}]}.
+{cs_http_proxy_port, 8080}.
+{cs_request_timeout, 999999000}.
+% If using the cs_measurement_units option, you need to change
 % any R graph's labels of the Y axis, e.g. basho_bench's Makefile target
 % "make mbyte_sec-results"
-{moss_measurement_units, mbyte_sec}.
+{cs_measurement_units, mbyte_sec}.
 
 {key_generator, {int_to_str, {partitioned_sequential_int, 1000}}}.
 %{key_generator, {int_to_str, {uniform_int, 1000}}}.
 %% See comments in source code for bigfile_valgen() function for full
 %% explanation of the proplist below.
-{value_generator, {function, basho_bench_driver_moss, bigfile_valgen,
+{value_generator, {function, basho_bench_driver_cs, bigfile_valgen,
                   [[{file_size, 8001001},
                     {ibrowse_block_size, 1000000},
                     {max_rate_per_chunk, 50}]]}}.
